--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,4 +16,4 @@ jobs:
           python-version: ${{matrix.python}}
       - name: Run tests
         run: |
-          python -m doctest .
+          python -m doctest --verbose lab.py
